--- a/cn/weapon/CometQuasher.html
+++ b/cn/weapon/CometQuasher.html
@@ -44,17 +44,17 @@
                 当使用剑刃攻击到敌人时，彗星陨刃会额外从上方发射陨石弹幕。<br>
                 它的最佳前缀是传奇
             </p>
-            <img src="CometQuasher.png" alt="CometQuasher" width=600>
+            <img src="CometQuasher.gif" alt="CometQuasher" width=600>
             <p>
                 彗星陨刃的陨石弹幕具有小范围的爆炸伤害，用非剑刃的弹幕攻击会造成武器面板的一半伤害；<br>
                 而剑刃攻击生成的陨石弹幕仅造成武器面板的四分之一伤害。
             </p>
-            <p class="extra-tip">——额外tip</p>
+            <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki/Comet_Quasher">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/b167034f95ccc68a32fef1664c4a48dd1a8ec38e/Content/Projectiles/Weapons/Melee/HeldProjectiles/CometQuasherHeld.cs#L10">查看代码实现</a>
             </button>
         </main>
 
