--- a/cn/weapon/DefiledGreatsword.html
+++ b/cn/weapon/DefiledGreatsword.html
@@ -42,15 +42,15 @@
                 神殇巨剑是一把月球领主后可制作的近战武器，由凋亡屠刃升级而来。<br>
                 神殇巨剑未充能时，会发射圆形的追踪剑气。<br>
                 当用剑刃攻击敌人时，神殇巨剑的攻击速度大幅提升，逐渐为神殇巨剑进行充能，且取消剑气攻击，从两侧额外追加丛林之镰进行追击。<br>
-                神殇巨剑具有充能时，攻速会显著提升，并且会向玩家各方位发射剑气，剑气会追踪敌人<br>
+                神殇巨剑具有充能时，攻速会显著提升，并且会向光标方位发射三道剑气<br>
                 它的最佳前缀是传奇
             </p>
-            <img src="DefiledGreatsword.png" alt="M1" width=600>
+            <img src="DefiledGreatsword.gif" alt="DefiledGreatsword" width=600>
             <p>
                 当神殇巨剑剑刃攻击到敌人时，会给予玩家5秒的残酷杀戮增益，提供 +20% 近战伤害；<br>
                 充能状态下的神殇巨剑会造成武器面板的剑气伤害，未充能仅造成武器面板的百分之七十五。
             </p>
-            <p class="extra-tip">——额外tip</p>
+            <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href=https://calamitymod.wiki.gg/wiki/Defiled_Greatsword>查看原版信息</a>
             </button>
