--- a/cn/weapon/EntropicClaymore.html
+++ b/cn/weapon/EntropicClaymore.html
@@ -44,17 +44,17 @@
                 等离子弹幕分别会从剑刃两侧发射。<br>
                 它的最佳前缀是神级
             </p>
-            <img src="EntropicClaymore.png" alt="M1" width=600>
+            <img src="EntropicClaymore.gif" alt="EntropicClaymore" width=600>
             <p>
                 等离子弹幕造成武器面板的三分之二的伤害；<br>
                 等离子弹幕会穿透四个敌人，并且具有穿透减伤，穿透四个敌人后不再造成伤害效果，仅有视觉效果。
             </p>
-            <p class="extra-tip">——额外tip</p>
+            <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki/Entropic_Claymore">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/b167034f95ccc68a32fef1664c4a48dd1a8ec38e/Content/Items/Melee/EntropicClaymoreEcType.cs#L20">查看代码实现</a>
             </button>
         </main>
 
