--- a/cn/weapon/GhostFireWhip.html
+++ b/cn/weapon/GhostFireWhip.html
@@ -44,13 +44,10 @@
                 鬼火的伤害仅有武器面板的四分之一。<br>
                 它的最佳前缀是传奇
             </p>
-            <img src="GhostFireWhip.png" alt="GhostFireWhip" width=600>
-            <p class="extra-tip">——额外tip</p>
+            <img src="GhostFireWhip.gif" alt="GhostFireWhip" width=600>
+            <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
-            </button>
-            <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Summon/Extras/GhostFireWhip.cs">查看代码实现</a>
             </button>
         </main>
 
