--- a/cn/weapon/Terratomere.html
+++ b/cn/weapon/Terratomere.html
@@ -44,17 +44,17 @@
                 用剑刃攻击到敌人会治疗玩家五生命值。<br>
                 它的最佳前缀是神级
             </p>
-            <img src="Terratomere.png" alt="M1" width=600>
+            <img src="Terratomere.gif" alt="Terratomere" width=600>
             <p>
                 生命洪流具有三次伤害判定，两段伤害造成武器面板的四分之一，一段伤害造成武器面板的二分之一；<br>
                 爆破伤害属于群体伤害，粒子效果内的所有敌人都会受到此伤害。
             </p>
-            <p class="extra-tip">——额外tip</p>
+            <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki/Terratomere">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/b167034f95ccc68a32fef1664c4a48dd1a8ec38e/Content/Items/Melee/TerratomereEcType.cs#L20">查看代码实现</a>
             </button>
         </main>
 
