--- a/cn/weapon/TerrorBlade.html
+++ b/cn/weapon/TerrorBlade.html
@@ -45,17 +45,17 @@
                 使用剑刃攻击到敌人时候，会为惊惧魂刃进行充能，释放出更强力的惊惧剑气。<br>
                 它的最佳前缀是传奇
             </p>
-            <img src="TerrorBlade.png" alt="TerrorBlade" width=600>
+            <img src="TerrorBlade.gif" alt="TerrorBlade" width=600>
             <p>
                 惊惧爆弹命中敌人时候会造成武器面板的伤害，爆破仅造成武器面板四分之一的伤害；<br>
                 惊惧剑气穿透数量与惊惧爆弹相同，命中时会产生额外一道的剑气攻击，造成武器面板的二分之一伤害。
             </p>
-            <p class="extra-tip">——额外tip</p>
+            <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki/Terror_Blade">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/b167034f95ccc68a32fef1664c4a48dd1a8ec38e/Content/Items/Melee/TerrorBladeEcType.cs">查看代码实现</a>
             </button>
         </main>
 
