--- a/cn/weapon/WindBlade.html
+++ b/cn/weapon/WindBlade.html
@@ -44,11 +44,11 @@
                 右键可发射小型气旋，可进行追踪。<br>
                 它的最佳前缀是传奇
             </p>
-            <img src="WindBlade.png" alt="WindBlade" width=600>
+            <img src="WindBlade.gif" alt="WindBlade" width=600>
             <p>
                 大范围气旋造成武器面板二分之一的伤害，小型气旋造成武器面板四分之一伤害
             </p>
-            <p class="extra-tip">——额外tip</p>
+            <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki/Wind_Blade">查看原版信息</a>
             </button>
