--- a/cn/weapon/BurntSienna.html
+++ b/cn/weapon/BurntSienna.html
@@ -43,8 +43,8 @@
                 鼠标左键攻击会释放沙球，沙球攻击到敌人会有爆炸效果，但是没有范围伤害，沙球受重力影响。<br>
                 它的最佳前缀是传奇
             </p>
-            <img src="BurntSienna.png" alt="BurntSienna" width=600>
-            <!--<p class="extra-tip">——额外tip</p>-->
+            <img src="BurntSienna.gif" alt="BurntSienna" width=600>
+            <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki/Burnt_Sienna">查看原版信息</a>
             </button>
