--- a/cn/weapon/DaemonsFlame.html
+++ b/cn/weapon/DaemonsFlame.html
@@ -40,17 +40,17 @@
             <h1>鬼火弓</h1>
             <p> 
                 鬼火弓是一把月球领主后的远程武器，掉落自噬魂幽花。<br>
-                将木箭转化为鬼火簇，鬼火簇造成武器面板的伤害。<br>
+                将木箭转化为鬼火簇，造成武器面板的伤害，并追踪敌人。<br>
                 发射其余箭矢时会额外发射恶魔火球，恶魔火球造成武器面板的伤害。<br>
                 它的最佳前缀是虚幻
             </p>
-            <img src="DaemonsFlame.png" alt="DaemonsFlame" width=600>
-            <p class="extra-tip">——额外tip</p>
+            <img src="DaemonsFlame.gif" alt="DaemonsFlame" width=600>
+            <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Daemon%27s_Flame">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Projectiles/Weapons/Ranged/HeldProjs/DaemonsFlameHeldProj.cs">查看代码实现</a>
             </button>
         </main>
 
