--- a/cn/weapon/DivineSourceBlade.html
+++ b/cn/weapon/DivineSourceBlade.html
@@ -44,15 +44,12 @@
                 并且会有额外的小范围金源剑气。<br>
                 它的最佳前缀是传奇
             </p>
-            <img src="DivineSourceBlade.png" alt="DivineSourceBlade" width=600>
+            <img src="DivineSourceBlade.gif" alt="DivineSourceBlade" width=600>
             <p>
                 金源之刃仅会对第一个命中的敌人造成额外追杀效果，且只能穿透四个敌人，无穿透减伤；<br>
                 金源之刃造成武器面板的伤害，金源剑气造成武器面板的1.2倍伤害。
             </p>
-            <p class="extra-tip">——额外tip</p>
-            <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
-            </button>
+            <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
             </button>
