--- a/cn/weapon/FatesReveal.html
+++ b/cn/weapon/FatesReveal.html
@@ -45,13 +45,13 @@
                 即使在没有魔力的情况下使用这把武器，仍然可以产生小火苗，但不会生成哀怨灵火<br>
                 它的最佳前缀是神话
             </p>
-            <img src="FatesReveal.png" alt="M1" width=600>
-            <p class="extra-tip">——额外tip</p>
+            <img src="FatesReveal.gif" alt="FatesReveal" width=600>
+            <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Fate%27s_Reveal">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Projectiles/Weapons/Magic/HeldProjs/FatesRevealHeldProj.cs">查看代码实现</a>
             </button>
         </main>
 
