--- a/cn/weapon/HeavenfallLongbow.html
+++ b/cn/weapon/HeavenfallLongbow.html
@@ -46,13 +46,10 @@
                 更多具体描述...<br>
                 它的最佳前缀是虚幻
             </p>
-            <img src="HeavenfallLongbow.png" alt="HeavenfallLongbow" width=600>
-            <p class="extra-tip">——额外tip</p>
+            <img src="HeavenfallLongbow.gif" alt="HeavenfallLongbow" width=600>
+            <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
-            </button>
-            <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Ranged/Extras/HeavenfallLongbow.cs">查看代码实现</a>
             </button>
         </main>
 
