--- a/cn/weapon/StormGoddessSpear.html
+++ b/cn/weapon/StormGoddessSpear.html
@@ -46,13 +46,10 @@
                 
                 它的最佳前缀是神级
             </p>
-            <img src="StormGoddessSpear.gif" alt="StormGoddessSpear" width=600>
-            <p class="extra-tip">——额外tip</p>
+            <img src="StormGoddessSpearFrame.gif" alt="StormGoddessSpear" width=600>
+            <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
-            </button>
-            <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Melee/Extras/StormGoddessSpear.cs">查看代码实现</a>
             </button>
         </main>
 
