--- a/cn/weapon/HeavenfallLongbow.html
+++ b/cn/weapon/HeavenfallLongbow.html
@@ -39,14 +39,28 @@
         <main class="main-content">
             <h1>天堂陨落长弓</h1>
             <p> 
-                天堂陨落长弓是一把boss rush的终焉武器，在欧米茄物质聚合仪处合成<br>
-                发射无尽之箭，终焉彩虹能量将随后而至<br>
-                右键让天堂之箭从天而降<br>
-                蓄力完成后按下[KEY]启动万象审判<br>
-                更多具体描述...<br>
+                天堂陨落长弓是一把boss rush后的终焉武器，在欧米茄物质聚合仪处合成
+                左键使用发射无尽之箭,并召唤出终焉能量光束贯穿箭矢所向
+                右键使用呼唤天堂之箭从天而降,搜寻并摧毁敌人
+                使用这把武器将聚集终焉彩虹能量,天堂陨落长弓的光辉将随之变化.
+                当能量聚集完成后,将爆发出欧米茄印记,之后解锁特殊攻击:
+                按下(自定义按键)启动万象审判,召唤出弓阵将敌人湮灭于光芒之中
                 它的最佳前缀是虚幻
             </p>
             <img src="HeavenfallLongbow.gif" alt="HeavenfallLongbow" width=600>
+            <h2>武器传说</h2>
+            <p style="color: burlywood;"> 
+                百亿年前的战火并未熄灭，它们如炽烈的余烬，穿越无尽时光，至今燃烧不息。<br>
+			    那是众神黄昏的遗迹，是古老宇宙裂变时刻的余光，是生生不息的回响。<br>
+			    耀界之神，银河秩序的化身，在那场宇宙间最伟大的反叛中陨落。<br>
+			    祂的身躯如同星辰碎裂，化作无数璀璨的神辉，散落至银河的每一个角落。<br>
+			    那些光辉孕育了生命、知识与奇迹，也带来了贪婪、毁灭与亵渎。凡人崇拜着祂的残骸，称之为神圣遗迹；<br>
+			    而那些奇迹之物，不过是对祂力量的拙劣复制，是凡人不知敬畏的狂妄象征。<br>
+			    但在无尽的遗忘与遗迹之中，有一物品超越了神迹，它不仅见证了至高神的陨落，更亲手将其送入永夜的深渊——这是一把传说中的长弓。<br>
+			    它曾在天堂的怒火中燃烧，射出那致命的一箭，粉碎了至高神的权能，终结了众神的野望。<br>
+			    随着战争的终结，这柄弓也随时间的洪流被埋葬在无尽的神秘与传说中。<br>
+			    而如今，命运的齿轮再次转动，天堂的怒火重新点燃。那柄杀神之弓，将在众星的赞歌中复现，再次将历史书写于鲜血与星尘之上<br>
+            </p>
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Ranged/Extras/HeavenfallLongbow.cs">查看代码实现</a>
@@ -63,16 +77,9 @@
             <p class="item-usetimer">使用时间: 10</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-            百亿年前的战火并未熄灭，它们如炽烈的余烬，穿越无尽时光，至今燃烧不息。<br>
-			那是众神黄昏的遗迹，是古老宇宙裂变时刻的余光，是生生不息的回响。<br>
-			耀界之神，银河秩序的化身，在那场宇宙间最伟大的反叛中陨落。<br>
-			祂的身躯如同星辰碎裂，化作无数璀璨的神辉，散落至银河的每一个角落。<br>
-			那些光辉孕育了生命、知识与奇迹，也带来了贪婪、毁灭与亵渎。凡人崇拜着祂的残骸，称之为神圣遗迹；<br>
-			而那些奇迹之物，不过是对祂力量的拙劣复制，是凡人不知敬畏的狂妄象征。<br>
-			但在无尽的遗忘与遗迹之中，有一物品超越了神迹，它不仅见证了至高神的陨落，更亲手将其送入永夜的深渊——这是一把传说中的长弓。<br>
-			它曾在天堂的怒火中燃烧，射出那致命的一箭，粉碎了至高神的权能，终结了众神的野望。<br>
-			随着战争的终结，这柄弓也随时间的洪流被埋葬在无尽的神秘与传说中。<br>
-			而如今，命运的齿轮再次转动，天堂的怒火重新点燃。那柄杀神之弓，将在众星的赞歌中复现，再次将历史书写于鲜血与星尘之上<br>
+                发射无尽之箭，终焉彩虹能量将随后而至
+			    右键让天堂之箭从天而降
+			    蓄力完成后按下(自定义按键)启动万象审判
             </p>
         </div>        
     </div>
