--- a/cn/weapon/HeavenfallLongbow.html
+++ b/cn/weapon/HeavenfallLongbow.html
@@ -39,12 +39,12 @@
         <main class="main-content">
             <h1>天堂陨落长弓</h1>
             <p> 
-                天堂陨落长弓是一把boss rush后的终焉武器，在欧米茄物质聚合仪处合成
-                左键使用发射无尽之箭,并召唤出终焉能量光束贯穿箭矢所向
-                右键使用呼唤天堂之箭从天而降,搜寻并摧毁敌人
-                使用这把武器将聚集终焉彩虹能量,天堂陨落长弓的光辉将随之变化.
-                当能量聚集完成后,将爆发出欧米茄印记,之后解锁特殊攻击:
-                按下(自定义按键)启动万象审判,召唤出弓阵将敌人湮灭于光芒之中
+                天堂陨落长弓是一把boss rush后的终焉武器，在欧米茄物质聚合仪处合成<br>
+                左键使用发射无尽之箭,并召唤出终焉能量光束贯穿箭矢所向<br>
+                右键使用呼唤天堂之箭从天而降,搜寻并摧毁敌人<br>
+                使用这把武器将聚集终焉彩虹能量,天堂陨落长弓的光辉将随之变化.<br>
+                当能量聚集完成后,将爆发出欧米茄印记,之后解锁特殊攻击:<br>
+                按下(自定义按键)启动万象审判,召唤出弓阵将敌人湮灭于光芒之中<br>
                 它的最佳前缀是虚幻
             </p>
             <img src="HeavenfallLongbow.gif" alt="HeavenfallLongbow" width=600>
