--- a/cn/weapon/FatesReveal.html
+++ b/cn/weapon/FatesReveal.html
@@ -41,7 +41,7 @@
             <p> 
                 命运神启是一把困难模式下的法杖类武器，掉落自噬魂幽花<br>
                 它会在敌人四周生成数个环绕的哀怨灵火，不断发射弹幕攻击敌人<br>
-                在使用时，法杖会不断产生向上浮动的小火苗，上升一小段距离后消失，火苗造成14点固定伤害（可暴击）<br>
+                在使用时，法杖会不断产生向上浮动的小火苗，上升一小段距离后消失，火苗造成13~15点伤害（可暴击）<br>
                 即使在没有魔力的情况下使用这把武器，仍然可以产生小火苗，但不会生成哀怨灵火<br>
                 它的最佳前缀是神话
             </p>
