--- a/cn/weapon/Murasama.html
+++ b/cn/weapon/Murasama.html
@@ -40,13 +40,14 @@
             <h1>鬼妖村正</h1>
             <p> 
                 鬼妖村正是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是...
+                右键瞄准并积蓄剑之能量。左键进行真近战攻击击中目标时，将为剑之能量充能。<br>
+                如果周围存在强大的敌人（boss类型），剑之能量将会缓慢自行充能。<br>
+                当剑之能量蓄满后，按下[KEY1]发射刀身。在刀身飞行过程中，按下左键执行升龙斩击 [Lang1]<br>
+                升龙斩击命中敌人后会为武器1充能。按下[KEY2]消耗1点武器充能值，进行一次下砸攻击 [Lang2]<br>
+                当武器充能值达到最大值10点后，再次用升龙斩击命中敌人将触发终结技 [Lang3]<br>
+                它的最佳前缀是传奇
             </p>
-            <img src="MurasamaPage.gif" alt="M1" class="pwertGIF" loading="lazy">
+            <img src="MurasamaPage.gif" alt="Murasama" class="pwertGIF" loading="lazy">
             <p class="extra-tip">——额外tip</p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki/Murasama">查看原版信息</a>
@@ -58,19 +59,16 @@
 
         <div class="image-block">
             <h1 class="img-Item-Title">鬼妖村正</h1>
-            <img src="MurasamaPage.gif" alt="M1">
+            <img src="MurasamaPage.gif" alt="Murasama">
             <p class="item-id">内部名: Murasama</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 8000</p>
             <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-usetimer">使用时间: 5</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                右键瞄准并积蓄剑之能量。左键进行真近战攻击击中目标时，将为剑之能量充能。<br>
-			    如果周围存在强大的敌人，剑之能量将会缓慢自行充能。<br>
-			    当剑之能量蓄满后，按下[KEY1]发射刀身。在刀身飞行过程中，按下左键执行升龙斩击<br>
-			    升龙斩击命中敌人后会为武器1充能。按下[KEY2]消耗1点武器充能值，进行一次下砸攻击<br>
-			    当武器充能值达到最大值10点后，再次用升龙斩击命中敌人将触发终结技<br>
+			    <br>
+			    <br>
 			    "如果有链锯剑会更好"
             </p>
         </div>        
