--- a/cn/weapon/BansheeHook.html
+++ b/cn/weapon/BansheeHook.html
@@ -44,7 +44,7 @@
                 鼠标左键会释放镰刀射弹与近距离的飞行的四个分裂镰刀射弹，镰刀射弹经过短暂飞行后会追踪敌人，分裂的镰刀射弹经过短暂飞行后消失。<br>
                 鼠标右键会吟唱两秒，并且在此期间会从自身发射环形的镰刀弹幕与鬼火；<br>
                 吟唱结束后会在鼠标位置生存镰刀射弹，镰刀射弹击中敌人后会产生深渊幽魂进行追击。<br>
-                它的最佳前缀是神级
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">神级</a>
             </p>
             <img src="BansheeHook.gif" alt="BansheeHook" class="pwertGIF" loading="lazy">
             <p>
