--- a/cn/weapon/PerfectDark.html
+++ b/cn/weapon/PerfectDark.html
@@ -37,33 +37,30 @@
         </aside>
 
         <main class="main-content">
-            <h1>暗雷回响</h1>
+            <h1>完美黑暗</h1>
             <p> 
-                暗雷回响是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                完美黑暗是一把困难模式前的阔剑类武器，掉落自<a href="https://calamitymod.wiki.gg/wiki/The_Hive_Mind" class="clickable-word">腐巢意志</a><br>
+                它会发射毒沼炸弹，接触敌人后爆炸<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="PerfectDark.png" alt="PerfectDark" class="pwertGIF" loading="lazy">
+            <img src="PerfectDark.gif" alt="PerfectDark" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Perfect_Dark">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Melee/PerfectDarkEcType.cs">查看代码实现</a>
             </button>
         </main>
 
         <div class="image-block">
-            <h1 class="img-Item-Title">暗雷回响</h1>
+            <h1 class="img-Item-Title">完美黑暗</h1>
             <img src="PerfectDark.png" alt="PerfectDark">
-            <p class="item-id">内部名: 暗雷回响</p>
+            <p class="item-id">内部名: PerfectDark</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 29</p>
+            <p class="item-knockback">击退: 4.25</p>
+            <p class="item-usetimer">使用时间: 24</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
                 这里是物品在游戏中的描述<br>
