--- a/cn/weapon/StarnightLance.html
+++ b/cn/weapon/StarnightLance.html
@@ -38,19 +38,20 @@
 
         <main class="main-content">
             <h1>星夜长枪</h1>
-            <p> 
-                星夜长枪是一把困难模式的下长矛类武器，由12个寒元锭在秘银砧处合成<br>
-                发射寒冷的星夜光矛<br>
-                
-                它的最佳前缀是神级
+            <p>
+                星夜长枪是一把困难模式的下长矛类武器，由12个<a href="https://calamitymod.wiki.gg/wiki/Cryonic_Bar" class="clickable-word">寒元锭</a>在<a href="https://terraria.wiki.gg/zh/wiki/%E5%9B%B0%E9%9A%BE%E6%A8%A1%E5%BC%8F%E7%9A%84%E7%A0%A7" class="clickable-word">秘银砧</a>处合成<br>
+                攻击循环由三次捅刺动作和一个旋枪动作组成<br>
+                捅刺攻击会发射寒冷的星夜光矛<br>
+                旋枪攻击如果真近战命中目标会原地生成五个慢速度的星夜光矛<br>
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">神级</a>
             </p>
-            <img src="StarnightLance.png" alt="StarnightLance" class="pwertGIF" loading="lazy">
+            <img src="StarnightLance.gif" alt="StarnightLance" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Starnight_Lance">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Melee/StarnightLanceEcType.cs">查看代码实现</a>
             </button>
         </main>
 
@@ -64,8 +65,7 @@
             <p class="item-usetimer">使用时间: 10</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                令人通体生寒<br>
-                
+                令人通体生寒
             </p>
         </div>        
     </div>
