--- a/cn/weapon/StormGoddessSpear.html
+++ b/cn/weapon/StormGoddessSpear.html
@@ -44,7 +44,7 @@
                 小弹幕在向上（或向下）缓慢浮动一段距离后炸成电火花和一道电弧，对范围内目标造成伤害<br>
                 风暴之吻弹幕无限穿透，命中目标会产生电弧，这使得它或许更适合应对特殊事件<br>
                 
-                它的最佳前缀是神级
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">神级</a>
             </p>
             <img src="StormGoddessSpearFrame.gif" alt="StormGoddessSpear" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
