--- a/cn/weapon/Terratomere.html
+++ b/cn/weapon/Terratomere.html
@@ -42,7 +42,7 @@
                 泰拉巨刃是一把月球领主后的近战武器，由泰拉刃升级而来。<br>
                 泰拉巨刃仅可进行左键攻击，按住鼠标左键攻击时，会发射三个生命洪流，命中敌人会产生爆破效果。<br>
                 用剑刃攻击到敌人会治疗玩家五生命值。<br>
-                它的最佳前缀是神级
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">神级</a>
             </p>
             <img src="Terratomere.gif" alt="Terratomere" class="pwertGIF" loading="lazy">
             <p>
