--- a/cn/weapon/CelestialClaymore.html
+++ b/cn/weapon/CelestialClaymore.html
@@ -52,7 +52,7 @@
                 <a href="https://calamitymod.wiki.gg/wiki/Celestial_Claymore">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Melee/CelestialClaymoreEcType.cs">查看代码实现</a>
             </button>
         </main>
 
