--- a/cn/weapon/EntropicClaymore.html
+++ b/cn/weapon/EntropicClaymore.html
@@ -42,7 +42,7 @@
                 熵之舞是一把困难模式后可制作的近战武器。<br>
                 熵之舞左键攻击会发射等离子弹幕，等离子弹幕会向鼠标光标位置而攻击。<br>
                 等离子弹幕分别会从剑刃两侧发射。<br>
-                它的最佳前缀是神级
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">神级</a>
             </p>
             <img src="EntropicClaymore.gif" alt="EntropicClaymore" class="pwertGIF" loading="lazy">
             <p>
