--- a/cn/weapon/GreatswordofJudgement.html
+++ b/cn/weapon/GreatswordofJudgement.html
@@ -40,18 +40,17 @@
             <h1>制裁大剑</h1>
             <p> 
                 制裁大剑是一把可制作的月亮领主后的阔剑类武器。<br>
-                使用时挥舞造成100%武器面板伤害并发射追踪剑型弹幕<br>
-                剑型弹幕两侧会不断生成白色光球弹幕<br>
-                剑型弹幕命中敌人时生成花型白色弹幕，造成多段伤害<br>
+                它会发射一个追踪目标的弹幕，弹幕在飞行过程中所产生的白色粒子效果并没有碰撞判定<br>
+                而在击中目标后会产生三颗火球，拥有武器33%的伤害<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="GreatswordofJudgement.gif" alt="M1" class="pwertGIF" loading="lazy">
+            <img src="GreatswordofJudgement.gif" alt="GreatswordofJudgement" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki/Greatsword_of_Judgement">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Melee/GreatswordofJudgementEcType.cs">查看代码实现</a>
             </button>
         </main>
 
@@ -65,11 +64,10 @@
             <p class="item-usetimer">使用时间: 18</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                发射一个白色光球，在消失后一段时间内落下白色追踪雨滴<br>
-                遗忘之土的白色长剑<br>
-                你可以听到这把剑传出的虚弱而带安抚的耳语<br>
-                “无论何地，你都不会孤身一人<br>
-                我会永远陪伴在你身边，我的王”
+                发射一个追踪敌人的宝石刃，命中后会分裂成三颗审判火球。<br>
+                遗忘之土的白色长剑。<br>
+                你可以听到这把剑传出的虚弱而带安抚的耳语。<br>
+                “无论何处，卿永不孤寂，吾当长伴卿侧，吾之君王”
             </p>
         </div>        
     </div>
