--- a/cn/weapon/TheEnforcer.html
+++ b/cn/weapon/TheEnforcer.html
@@ -45,13 +45,13 @@
                 宇宙之火存在一段时间后将自动爆炸<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="TheEnforcer.gif" alt="M1" class="pwertGIF" loading="lazy">
+            <img src="TheEnforcer.gif" alt="TheEnforcer" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki/The_Enforcer">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Melee/TheEnforcerEcType.cs">查看代码实现</a>
             </button>
         </main>
 
