--- a/cn/weapon/StarnightLance.html
+++ b/cn/weapon/StarnightLance.html
@@ -61,11 +61,12 @@
             <p class="item-id">内部名: StarnightLance</p>
             <p class="item-property">基本属性</p>
             <p class="item-damage">伤害: 110</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-knockback">击退: 6</p>
+            <p class="item-usetimer">使用时间: 23</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                令人通体生寒
+                发射寒冷的星夜光矛<br>
+                "令人通体生寒"
             </p>
         </div>        
     </div>
