--- a/cn/weapon/BrimstoneSword.html
+++ b/cn/weapon/BrimstoneSword.html
@@ -39,26 +39,24 @@
         <main class="main-content">
             <h1>硫火短剑</h1>
             <p> 
-                硫火短剑是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                硫火短剑是一把困难模式下的短剑类武器，由材料合成<br>
+                它会发射一个高速移动的硫磺火剑刃，命中敌人后制造一场小型的硫磺火爆炸<br>
+                真近战会向天空抛射大量硫磺火球<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="BrimstoneSword.png" alt="M1" class="pwertGIF" loading="lazy">
+            <img src="BrimstoneSword.gif" alt="BrimstoneSword" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Brimstone_Sword">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Projectiles/Weapons/Melee/HeldProjectiles/BrimstoneSwordHeld.cs">查看代码实现</a>
             </button>
         </main>
 
         <div class="image-block">
             <h1 class="img-Item-Title">硫火短剑</h1>
-            <img src="BrimstoneSword.png" alt="M1">
+            <img src="BrimstoneSword.png" alt="BrimstoneSword">
             <p class="item-id">内部名: BrimstoneSword</p>
             <p class="item-property">基本属性</p>
             <p class="item-damage">伤害: 10</p>
