--- a/cn/weapon/Orderbringer.html
+++ b/cn/weapon/Orderbringer.html
@@ -39,36 +39,32 @@
         <main class="main-content">
             <h1> 携序之刃</h1>
             <p> 
-                携序之刃是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                携序之刃是一把月球领主后的阔剑类武器，由材料合成<br>
+                它会发射多个追踪敌人的彩虹棱晶能量<br>
+                连续击打同一个敌人后会召唤一个巨大的剑灵<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="Orderbringer.png" alt="M1" class="pwertGIF" loading="lazy">
+            <img src="Orderbringer.gif" alt="Orderbringer" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Orderbringer">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Melee/OrderbringerEcType.cs">查看代码实现</a>
             </button>
         </main>
 
         <div class="image-block">
             <h1 class="img-Item-Title"> 携序之刃</h1>
-            <img src="Orderbringer.png" alt="M1">
+            <img src="Orderbringer.png" alt="Orderbringer">
             <p class="item-id">内部名: Orderbringer</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 228</p>
+            <p class="item-knockback">击退: 7</p>
+            <p class="item-usetimer">使用时间: 18</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                “无论何处，卿永不孤寂，吾当长伴卿侧，吾之君王”
             </p>
         </div>        
     </div>
