--- a/cn/weapon/SubmarineShocker.html
+++ b/cn/weapon/SubmarineShocker.html
@@ -39,35 +39,32 @@
         <main class="main-content">
             <h1> 渊海短剑</h1>
             <p> 
-                渊海短剑是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                渊海短剑是一把困难模式下的短剑类武器，掉落自渊海灾虫<br>
+                它会发射随机移动的电弧珠，追钟一定范围内的敌人<br>
+                真近战攻击会生成大量受重力影响的电火花，造成多端伤害<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="SubmarineShocker.png" alt="M1" class="pwertGIF" loading="lazy">
+            <img src="SubmarineShocker.gif" alt="SubmarineShocker" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Submarine_Shocker">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Projectiles/Weapons/Melee/HeldProjectiles/SubmarineShockerHeld.cs">查看代码实现</a>
             </button>
         </main>
 
         <div class="image-block">
-            <h1 class="img-Item-Title"> 渊海短剑</h1>
-            <img src="SubmarineShocker.png" alt="M1">
+            <h1 class="img-Item-Title">渊海短剑</h1>
+            <img src="SubmarineShocker.png" alt="SubmarineShocker">
             <p class="item-id">内部名: SubmarineShocker</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
+            <p class="item-damage">伤害: 90</p>
+            <p class="item-knockback">击退: 7</p>
             <p class="item-usetimer">使用时间: 10</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                发射电离子火花<br>
-                
+                发射电离子火花
             </p>
         </div>        
     </div>
