--- a/cn/weapon/PhosphorescentGauntlet.html
+++ b/cn/weapon/PhosphorescentGauntlet.html
@@ -39,20 +39,20 @@
         <main class="main-content">
             <h1>磷光拳套</h1>
             <p> 
-                磷光拳套是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                磷光拳套是一把月球领主后的近战武器，掉落自硫海遗爵<br>
+                左键使用会发射磷光拳头，击中敌人后会生成六个次级拳头造成二次伤害<br>
+                衍生的次级拳头会锁定打击生成时的目标<br>
+                当一个敌人被磷光拳头连续击中10次后，会有两个巨大的拳头从屏幕两侧飞入撞击目标<br>
+                右键使用与原版无异<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="PhosphorescentGauntlet.png" alt="PhosphorescentGauntlet" class="pwertGIF" loading="lazy">
+            <img src="PhosphorescentGauntlet.gif" alt="PhosphorescentGauntlet" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Phosphorescent_Gauntlet">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Melee/PhosphorescentGauntletEcType.cs">查看代码实现</a>
             </button>
         </main>
 
