--- a/cn/weapon/StellarStriker.html
+++ b/cn/weapon/StellarStriker.html
@@ -39,36 +39,33 @@
         <main class="main-content">
             <h1>月炎之锋</h1>
             <p> 
-                月炎之锋是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                月炎之锋是一把月球领主后的阔剑类武器，由材料合成<br>
+                左键使用会发射残月射线，命中敌人后会在周围生成六个月炎爆炸<br>
+                右键使用会让刀刃增大至原来的1.5倍，并失去远程剑气的攻击手段，真近战命中敌人后会在周围生成六道残月斩切<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="StellarStriker.png" alt="M1" class="pwertGIF" loading="lazy">
+            <img src="StellarStriker.gif" alt="StellarStriker" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Stellar_Striker">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Melee/StellarStrikerEcType.cs">查看代码实现</a>
             </button>
         </main>
 
         <div class="image-block">
             <h1 class="img-Item-Title">月炎之锋</h1>
-            <img src="StellarStriker.png" alt="M1">
-            <p class="item-id">内部名: 月炎之锋</p>
+            <img src="StellarStriker.png" alt="StellarStriker">
+            <p class="item-id">内部名: StellarStriker</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 480</p>
+            <p class="item-knockback">击退: 7.75</p>
+            <p class="item-usetimer">使用时间: 20</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                发生残月射线<br>
+			    右键加强剑身，砍中敌人后生成数道残月斩切
             </p>
         </div>        
     </div>
