--- a/cn/weapon/TheLastMourning.html
+++ b/cn/weapon/TheLastMourning.html
@@ -39,36 +39,33 @@
         <main class="main-content">
             <h1>末晓之殇</h1>
             <p> 
-                末晓之殇是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                末晓之殇是一把月球领主后的阔剑类武器，由材料合成<br>
+                左键使用会发射追踪敌人的罪亡颅骨，命中敌人后会分裂为几团火球<br>
+                右键使用会让刀刃增大至原来的1.5倍，并失去远程剑气的攻击手段，真近战命中敌人后会在周围召唤怨灵颅骨来追杀目标<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="TheLastMourning.png" alt="TheLastMourning" class="pwertGIF" loading="lazy">
+            <img src="TheLastMourning.gif" alt="TheLastMourning" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/The_Last_Mourning">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Melee/TheLastMourningEcType.cs">查看代码实现</a>
             </button>
         </main>
 
         <div class="image-block">
             <h1 class="img-Item-Title">末晓之殇</h1>
             <img src="TheLastMourning.png" alt="TheLastMourning">
-            <p class="item-id">内部名: 末晓之殇</p>
+            <p class="item-id">内部名: TheLastMourning</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 220</p>
+            <p class="item-knockback">击退: 8.5</p>
+            <p class="item-usetimer">使用时间: 18</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                以罪亡颅骨和燎狱之魂追杀敌人<br>
+			    右键加强剑身，砍中敌人后生成数个怨灵颅骨
             </p>
         </div>        
     </div>
