--- a/en/core/weaponList.html
+++ b/en/core/weaponList.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/pwertList.css">
     <link rel="stylesheet" href="/languageSelector.css">
     <link rel="stylesheet" href="/searchTool/searchStyle.css">
+    <link rel="stylesheet" href="/weaponPage.css"><!--TODO:这个是暂时的样式导入-->
 </head>
 <body>
     <header class="wiki-header">
@@ -38,104 +39,13 @@
 
         <main class="main-content">
             <h1>List Of Weapons</h1>
-            <p>Click on any weapon to see details.</p>
+            <!--<p>Click on any weapon to see details.</p>>-->
+            <h2>The English section is not finished, you can choose to go to the Chinese section before this page is finished</h2>
+            <button id ="href_button">
+                <a href="/cn/core/weaponList.html"><h2>Go To Chinese Section</h2></a>
+            </button>
             <div class="weapon-grid">
-                <div class="weapon-item" onclick="location.href='/en/weapon/BrinyBaron.html'">
-                    <img src="/Asset/weapon/BrinyBaron.png" alt="BrinyBaron">
-                    <p>BrinyBaron</p>
-                </div>
-                <div class="weapon-item" onclick="location.href='/en/weapon/weaponPage.html'">
-                    <img src="/Asset/M1.gif" alt="武器2">
-                    <p>武器2</p>
-                </div>
-                <div class="weapon-item" onclick="location.href='/weaponPage.html'">
-                    <img src="/Asset/M1.gif" alt="武器3">
-                    <p>武器3</p>
-                </div>
-                <div class="weapon-item" onclick="location.href='/en/weapon/BrinyBaron.html'">
-                    <img src="/Asset/weapon/BrinyBaron.png" alt="BrinyBaron">
-                    <p>BrinyBaron</p>
-                </div>
-                <div class="weapon-item" onclick="location.href='/en/weapon/weaponPage.html'">
-                    <img src="/Asset/M1.gif" alt="武器2">
-                    <p>武器2</p>
-                </div>
-                <div class="weapon-item" onclick="location.href='/weaponPage.html'">
-                    <img src="/Asset/M1.gif" alt="武器3">
-                    <p>武器3</p>
-                </div>
-                <div class="weapon-item" onclick="location.href='/en/weapon/BrinyBaron.html'">
-                    <img src="/Asset/weapon/BrinyBaron.png" alt="BrinyBaron">
-                    <p>BrinyBaron</p>
-                </div>
-                <div class="weapon-item" onclick="location.href='/en/weapon/weaponPage.html'">
-                    <img src="/Asset/M1.gif" alt="武器2">
-                    <p>武器2</p>
-                </div>
-                <div class="weapon-item" onclick="location.href='/weaponPage.html'">
-                    <img src="/Asset/M1.gif" alt="武器3">
-                    <p>武器3</p>
-                </div>
-                <div class="weapon-item" onclick="location.href='/en/weapon/BrinyBaron.html'">
-                    <img src="/Asset/weapon/BrinyBaron.png" alt="BrinyBaron">
-                    <p>BrinyBaron</p>
-                </div>
-                <div class="weapon-item" onclick="location.href='/en/weapon/weaponPage.html'">
-                    <img src="/Asset/M1.gif" alt="武器2">
-                    <p>武器2</p>
-                </div>
-                <div class="weapon-item" onclick="location.href='/weaponPage.html'">
-                    <img src="/Asset/M1.gif" alt="武器3">
-                    <p>武器3</p>
-                </div>
-                <div class="weapon-item" onclick="location.href='/en/weapon/BrinyBaron.html'">
-                    <img src="/Asset/weapon/BrinyBaron.png" alt="BrinyBaron">
-                    <p>BrinyBaron</p>
-                </div>
-                <div class="weapon-item" onclick="location.href='/en/weapon/weaponPage.html'">
-                    <img src="/Asset/M1.gif" alt="武器2">
-                    <p>武器2</p>
-                </div>
-                <div class="weapon-item" onclick="location.href='/weaponPage.html'">
-                    <img src="/Asset/M1.gif" alt="武器3">
-                    <p>武器3</p>
-                </div>
-                <div class="weapon-item" onclick="location.href='/en/weapon/BrinyBaron.html'">
-                    <img src="/Asset/weapon/BrinyBaron.png" alt="BrinyBaron">
-                    <p>BrinyBaron</p>
-                </div>
-                <div class="weapon-item" onclick="location.href='/en/weapon/weaponPage.html'">
-                    <img src="/Asset/M1.gif" alt="武器2">
-                    <p>武器2</p>
-                </div>
-                <div class="weapon-item" onclick="location.href='/weaponPage.html'">
-                    <img src="/Asset/M1.gif" alt="武器3">
-                    <p>武器3</p>
-                </div>
-                <div class="weapon-item" onclick="location.href='/en/weapon/BrinyBaron.html'">
-                    <img src="/Asset/weapon/BrinyBaron.png" alt="BrinyBaron">
-                    <p>BrinyBaron</p>
-                </div>
-                <div class="weapon-item" onclick="location.href='/en/weapon/weaponPage.html'">
-                    <img src="/Asset/M1.gif" alt="武器2">
-                    <p>武器2</p>
-                </div>
-                <div class="weapon-item" onclick="location.href='/weaponPage.html'">
-                    <img src="/Asset/M1.gif" alt="武器3">
-                    <p>武器3</p>
-                </div>
-                <div class="weapon-item" onclick="location.href='/en/weapon/BrinyBaron.html'">
-                    <img src="/Asset/weapon/BrinyBaron.png" alt="BrinyBaron">
-                    <p>BrinyBaron</p>
-                </div>
-                <div class="weapon-item" onclick="location.href='/en/weapon/weaponPage.html'">
-                    <img src="/Asset/M1.gif" alt="武器2">
-                    <p>武器2</p>
-                </div>
-                <div class="weapon-item" onclick="location.href='/weaponPage.html'">
-                    <img src="/Asset/M1.gif" alt="武器3">
-                    <p>武器3</p>
-                </div>
+                
             </div>
         </main>
     </div>
