--- a/cn/weapon/Greentide.html
+++ b/cn/weapon/Greentide.html
@@ -39,36 +39,33 @@
         <main class="main-content">
             <h1>翡翠之潮</h1>
             <p> 
-                翡翠之潮是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                翡翠之潮是一把困难模式下的阔剑类武器，掉落自利维坦<br>
+                左键使用会在光标上方生成从天而降的尖牙<br>
+                右键使用会让刀刃增大至原来的1.5倍，并失去远程剑气的攻击手段，真近战命中敌人后会在上下生成大量的尖牙
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="Greentide.png" alt="Greentide" class="pwertGIF" loading="lazy">
+            
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Greentide">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Melee/GreentideEcType.cs">查看代码实现</a>
             </button>
         </main>
 
         <div class="image-block">
             <h1 class="img-Item-Title">翡翠之潮</h1>
             <img src="Greentide.png" alt="Greentide">
-            <p class="item-id">内部名: 翡翠之潮</p>
+            <p class="item-id">内部名: Greentide</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 95</p>
+            <p class="item-knockback">击退: 7</p>
+            <p class="item-usetimer">使用时间: 24</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                在指定位置下方生成几颗利维坦毒牙<br>
+			    右键加强剑身，砍中敌人后降下更多的毒牙
             </p>
         </div>        
     </div>
