--- a/cn/weapon/AstralBlade.html
+++ b/cn/weapon/AstralBlade.html
@@ -39,36 +39,33 @@
         <main class="main-content">
             <h1>幻星刃</h1>
             <p> 
-                幻星刃是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                幻星刃是一把困难模式下的阔剑类武器，掉落自星神游龙，也可以由材料合成<br>
+                它会发射弹道笔直的幻星之球，击中敌人后产生一次星尘爆破，敌人的剩余血量越高，造成的实际伤害越高<br>
+                真近战如果打出暴击，会在屏幕的四个方向生成超级星星打击敌人<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="AstralBlade.png" alt="AstralBlade" class="pwertGIF" loading="lazy">
+            <img src="AstralBlade.gif" alt="AstralBlade" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Astral_Blade">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Melee/AstralBladeEcType.cs">查看代码实现</a>
             </button>
         </main>
 
         <div class="image-block">
             <h1 class="img-Item-Title">幻星刃</h1>
             <img src="AstralBlade.png" alt="AstralBlade">
-            <p class="item-id">内部名: 幻星刃</p>
+            <p class="item-id">内部名: AstralBlade</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 142</p>
+            <p class="item-knockback">击退: 6</p>
+            <p class="item-usetimer">使用时间: 12</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                挥舞发射幻星之球，被击中的敌人的剩余血量越高，造成的实际伤害越高<br>
+			    真近战击中敌人后让群星降临
             </p>
         </div>        
     </div>
