--- a/cn/weapon/AstralPike.html
+++ b/cn/weapon/AstralPike.html
@@ -39,36 +39,33 @@
         <main class="main-content">
             <h1>幻星矛</h1>
             <p> 
-                幻星矛是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                幻星矛是一把困难模式下的长枪类武器，掉落星神游龙，或者由材料制作<br>
+                它的攻击循环由两次旋枪动作和一次捅刺动作组成，捅刺动作会发射三颗幻星<br>
+                而旋枪动作真近战命中敌人后会生成超级星星打击敌人<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="AstralPike.png" alt="AstralPike" class="pwertGIF" loading="lazy">
+            <img src="AstralPike.gif" alt="AstralPike" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Astral_Pike">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Melee/AstralPikeEcType.cs">查看代码实现</a>
             </button>
         </main>
 
         <div class="image-block">
             <h1 class="img-Item-Title">幻星矛</h1>
             <img src="AstralPike.png" alt="AstralPike">
-            <p class="item-id">内部名: 幻星矛</p>
+            <p class="item-id">内部名: AstralPike</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 90</p>
+            <p class="item-knockback">击退: 8.5</p>
+            <p class="item-usetimer">使用时间: 13</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                发射三颗璀璨幻星<br>
+			    真近战击中敌人后让群星降临
             </p>
         </div>        
     </div>
