--- a/cn/weapon/BalefulHarvester.html
+++ b/cn/weapon/BalefulHarvester.html
@@ -39,36 +39,38 @@
         <main class="main-content">
             <h1>邪恶收割者</h1>
             <p> 
-                邪恶收割者是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                邪恶收割者是一把困难模式下的镰刀类武器，由材料合成<br>
+                左键使用，会发射两个祛恶镰刀，在飞行过程快速减速，一小段时间后会追踪周围的目标<br>
+                右键使用可以蓄力旋转镰刀，松开右键后掷出，镰刀会在空中快速变大，落地后引起一场小型地震<br>
+                右键的投掷行为会将武器从玩家背包中移出，回收镰刀可以拿回武器<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="BalefulHarvester.png" alt="BalefulHarvester" class="pwertGIF" loading="lazy">
+            <h3>左键使用</h3>
+            <img src="BalefulHarvester.gif" alt="BalefulHarvester" class="pwertGIF" loading="lazy">
+            <h3>右键使用</h3>
+            <img src="BalefulHarvester2.gif" alt="BalefulHarvester" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Baleful_Harvester">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Melee/BalefulHarvesterEcType.cs">查看代码实现</a>
             </button>
         </main>
 
         <div class="image-block">
             <h1 class="img-Item-Title">邪恶收割者</h1>
             <img src="BalefulHarvester.png" alt="BalefulHarvester">
-            <p class="item-id">内部名: 邪恶收割者</p>
+            <p class="item-id">内部名: BalefulHarvester</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 90</p>
+            <p class="item-knockback">击退: 8</p>
+            <p class="item-usetimer">使用时间: 22</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                发射祛恶镰刀<br>
+			    右键可以抛出，引发一场小型的能量地震<br>
+			    "嘿！你得把它捡回来！"
             </p>
         </div>        
     </div>
