--- a/cn/weapon/Brimlash.html
+++ b/cn/weapon/Brimlash.html
@@ -39,36 +39,31 @@
         <main class="main-content">
             <h1>硫火鞭</h1>
             <p> 
-                硫火鞭是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                硫火鞭是一把困难模式下的阔剑类武器，由材料合成<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="Brimlash.png" alt="Brimlash" class="pwertGIF" loading="lazy">
+            <img src="Brimlash.gif" alt="Brimlash" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Brimlash">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Melee/BrimlashEcType.cs">查看代码实现</a>
             </button>
         </main>
 
         <div class="image-block">
             <h1 class="img-Item-Title">硫火鞭</h1>
             <img src="Brimlash.png" alt="Brimlash">
-            <p class="item-id">内部名: 硫火鞭</p>
+            <p class="item-id">内部名: Brimlash</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 70</p>
+            <p class="item-knockback">击退: 6</p>
+            <p class="item-usetimer">使用时间: 30</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                发射硫火剑气<br>
+			    右键从五个方向发射追踪的硫火爆弹，但有几率灼烧玩家
             </p>
         </div>        
     </div>
