--- a/cn/weapon/Aftershock.html
+++ b/cn/weapon/Aftershock.html
@@ -39,36 +39,33 @@
         <main class="main-content">
             <h1>地炎阔刃</h1>
             <p> 
-                地炎阔刃是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                地炎阔刃是一把困难模式下的阔剑类武器，掉落自地元魔魂<br>
+                左键使用会发射三枚受重力影响的岩石碎片<br>
+                右键会让剑刃大小增大至原来的1.5倍，真近战击中敌人让地炎巨石从天而降<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="Aftershock.png" alt="Aftershock" class="pwertGIF" loading="lazy">
+            <img src="Aftershock.gif" alt="Aftershock" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Aftershock">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Melee/AftershockEcType.cs">查看代码实现</a>
             </button>
         </main>
 
         <div class="image-block">
             <h1 class="img-Item-Title">地炎阔刃</h1>
             <img src="Aftershock.png" alt="Aftershock">
-            <p class="item-id">内部名: 地炎阔刃</p>
+            <p class="item-id">内部名: Aftershock</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 65</p>
+            <p class="item-knockback">击退: 7.5</p>
+            <p class="item-usetimer">使用时间: 28</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                挥舞发射数个大地碎片<br>
+			    右键增强剑身，真近战击中敌人让地炎巨石从天而降
             </p>
         </div>        
     </div>
