--- a/cn/weapon/AnarchyBlade.html
+++ b/cn/weapon/AnarchyBlade.html
@@ -39,36 +39,31 @@
         <main class="main-content">
             <h1>混乱之刃</h1>
             <p> 
-                混乱之刃是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                混乱之刃是一把困难模式下的阔剑类武器，由材料合成<br>
+                它每挥舞三次会发射一颗硫火爆弹，可以多次穿透敌人，在飞行轨迹末端会制造多个小型的硫磺火爆炸<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="AnarchyBlade.png" alt="AnarchyBlade" class="pwertGIF" loading="lazy">
+            <img src="AnarchyBlade.gif" alt="AnarchyBlade" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Anarchy_Blade">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Melee/AnarchyBladeEcType.cs">查看代码实现</a>
             </button>
         </main>
 
         <div class="image-block">
             <h1 class="img-Item-Title">混乱之刃</h1>
             <img src="AnarchyBlade.png" alt="AnarchyBlade">
-            <p class="item-id">内部名: 混乱之刃</p>
+            <p class="item-id">内部名: AnarchyBlade</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 150</p>
+            <p class="item-knockback">击退: 7.5</p>
+            <p class="item-usetimer">使用时间: 13</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                每挥舞三次发射一颗硫火爆弹
             </p>
         </div>        
     </div>
