--- a/cn/weapon/DiseasedPike.html
+++ b/cn/weapon/DiseasedPike.html
@@ -39,36 +39,31 @@
         <main class="main-content">
             <h1>瘟疫长枪</h1>
             <p> 
-                瘟疫长枪是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                瘟疫长枪是一把困难模式下的长枪类武器，掉落自瘟疫使者歌莉娅，也可以由材料合成<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="DiseasedPike.png" alt="DiseasedPike" class="pwertGIF" loading="lazy">
+            <!--<img src="DiseasedPike.png" alt="DiseasedPike" class="pwertGIF" loading="lazy">-->
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Diseased_Pike">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Melee/DiseasedPikeEcType.cs">查看代码实现</a>
             </button>
         </main>
 
         <div class="image-block">
             <h1 class="img-Item-Title">瘟疫长枪</h1>
             <img src="DiseasedPike.png" alt="DiseasedPike">
-            <p class="item-id">内部名: 瘟疫长枪</p>
+            <p class="item-id">内部名: DiseasedPike</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 65</p>
+            <p class="item-knockback">击退: 8.5</p>
+            <p class="item-usetimer">使用时间: 20</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                发射瘟疫蜂群<br>
+			    右键生成追踪的瘟疫能量
             </p>
         </div>        
     </div>
