--- a/cn/weapon/EarthenPike.html
+++ b/cn/weapon/EarthenPike.html
@@ -39,14 +39,10 @@
         <main class="main-content">
             <h1>地炎长矛</h1>
             <p> 
-                地炎长矛是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                地炎长矛是一把困难模式下的阔剑类武器，掉落自地元魔魂<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="EarthenPike.png" alt="EarthenPike" class="pwertGIF" loading="lazy">
+            <img src="EarthenPike.gif" alt="EarthenPike" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -59,16 +55,16 @@
         <div class="image-block">
             <h1 class="img-Item-Title">地炎长矛</h1>
             <img src="EarthenPike.png" alt="EarthenPike">
-            <p class="item-id">内部名: 地炎长矛</p>
+            <p class="item-id">内部名: EarthenPike</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 90</p>
+            <p class="item-knockback">击退: 7</p>
+            <p class="item-usetimer">使用时间: 25</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                发射数个大地碎片<br>
+			    右键可以将武器投掷出去<br>
+			    "嘿！你得捡回来！"
             </p>
         </div>        
     </div>
