--- a/cn/weapon/TeardropCleaver.html
+++ b/cn/weapon/TeardropCleaver.html
@@ -39,20 +39,16 @@
         <main class="main-content">
             <h1>泪刃</h1>
             <p> 
-                泪刃是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                泪刃是一把困难模式前的阔剑类武器，掉落自克苏鲁之眼<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="TeardropCleaver.png" alt="TeardropCleaver" class="pwertGIF" loading="lazy">
+            <!--<img src="TeardropCleaver.png" alt="TeardropCleaver" class="pwertGIF" loading="lazy">-->
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Teardrop_Cleaver">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Melee/TeardropCleaverEcType.cs">查看代码实现</a>
             </button>
         </main>
 
@@ -61,14 +57,12 @@
             <img src="TeardropCleaver.png" alt="TeardropCleaver">
             <p class="item-id">内部名: TeardropCleaver</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 25</p>
+            <p class="item-knockback">击退: 5.5</p>
+            <p class="item-usetimer">使用时间: 24</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                "泪雨倾盆"
             </p>
         </div>        
     </div>
