--- a/cn/weapon/VulcaniteLance.html
+++ b/cn/weapon/VulcaniteLance.html
@@ -39,31 +39,28 @@
         <main class="main-content">
             <h1>火山长矛</h1>
             <p> 
-                火山长矛是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                火山长矛是一把困难模式下的长枪类武器，由材料合成<br>
+                它的捅刺攻击会喷射混沌火焰，给予接触到的敌人硫磺火减益<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="VulcaniteLance.png" alt="VulcaniteLance" class="pwertGIF" loading="lazy">
+            <img src="VulcaniteLance.gif" alt="VulcaniteLance" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Vulcanite_Lance">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Melee/VulcaniteLanceEcType.cs">查看代码实现</a>
             </button>
         </main>
 
         <div class="image-block">
             <h1 class="img-Item-Title">火山长矛</h1>
             <img src="VulcaniteLance.png" alt="VulcaniteLance">
-            <p class="item-id">内部名: 火山长矛</p>
+            <p class="item-id">内部名: VulcaniteLance</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 90</p>
+            <p class="item-knockback">击退: 6.75</p>
+            <p class="item-usetimer">使用时间: 22</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
                 这里是物品在游戏中的描述<br>
